# GeoScoring

./: .gitignore  README.md  pyproject.toml  requirements.txt
parse_gis/: __init__.py  __main__.py  script.py
